# BandcampAutoUploader

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  changelog.txt  pyproject.toml  template_placeholders.md  template_placeholders.txt
.github/: dependabot.yml
bandcamp_auto_uploader/: __init__.py  __main__.py  __version__.py  config.py  i18n.py  upload.py
bandcamp_auto_uploader/gui/: __init__.py  common.py  gui.py  image_scaling.py  logs_mixin.py  settings_mixin.py
bandcamp_auto_uploader/locales/: en.json  ru.json
bandcamp_auto_uploader/qt_gui/: __init__.py  __main__.py  app.py  formatting.py
config/: pyproject.toml
scripts/: build_gui.py  installer.iss  release.py  scripts.py  set_version.py  version.inc
