[tool.poetry]
name = "bandcamp-auto-uploader"
version = "3"
description = "Upload albums to Bandcamp automatically without a Pro account"
authors = ["7x11x13 <x7x11x13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
browser-cookie3 = "^0.20.1"
inquirerpy = "^0.3.4"
mutagen = "^1.47.0"
requests = "^2.32.3"
rich = ">=13.7.1,<16.0.0"
pillow = ">=10,<13"
tkinterdnd2 = {version = ">=0.3,<0.5", optional = true}
numpy = {version = ">=1.24,<3.0", optional = true}
scipy = {version = "^1.10.0", optional = true}
windows-toasts = "^1.3"

[tool.poetry.extras]
dragdrop = ["tkinterdnd2"]
noise = ["numpy", "scipy"]

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = {version = "^6.8.0", python = ">=3.8,<3.13"}


[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.10,<0.16.0"
mypy = ">=1.19.1,<3.0.0"
types-requests = "^2.32.4.20250913"

[tool.poetry.scripts]
bc-upload = "bandcamp_auto_uploader.__main__:main"
style = "scripts:style"
check = "scripts:check"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
